# Halide

./: CMakeLists.txt  Makefile  _argument_8h.html  _argument_8h_source.html  _bounds_8h.html  _bounds_8h.js  _bounds_8h_source.html  _bounds_inference_8h.html  _bounds_inference_8h.js  _bounds_inference_8h_source.html  _buffer_8h.html  _buffer_8h.js  _buffer_8h_source.html  _code_gen_8h.html  _code_gen_8h_source.html  _code_gen___a_r_m_8h.html  _code_gen___a_r_m_8h.js  _code_gen___a_r_m_8h_source.html  _code_gen___c_8h.html  _code_gen___c_8h_source.html  _code_gen___internal_8h.html  _code_gen___internal_8h.js  _code_gen___internal_8h_source.html  _code_gen___p_t_x___dev_8h.html  _code_gen___p_t_x___dev_8h_source.html  _code_gen___p_t_x___host_8h.html  _code_gen___p_t_x___host_8h_source.html  _code_gen___posix_8h.html  _code_gen___posix_8h_source.html  _code_gen___x86_8h.html  _code_gen___x86_8h.js  _code_gen___x86_8h_source.html  _debug_to_file_8h.html  _debug_to_file_8h.js  _debug_to_file_8h_source.html  _deinterleave_8h.html  _deinterleave_8h_source.html  _derivative_8h.html  _derivative_8h.js  _derivative_8h_source.html  (+446 more)
apps/blur_diagonal/: .gitignore  Makefile  process.cpp  test.cpp
apps/linear_algebra/: Makefile
apps/linear_algebra/benchmarks/: cblas_benchmarks.cpp  eigen_benchmarks.cpp  halide_benchmarks.cpp
apps/linear_algebra/src/: blas_l3_generators.cpp  halide_blas.h
apps/linear_algebra/tests/: test_halide_blas.cpp
cpp/apps/: .gitignore
cpp/apps/blur/: test.cpp
cpp/apps/blur_diagonal/: Makefile  halide_blur.cpp  test.cpp
cpp/src/: CodeGen.cpp  CodeGen.h  Simplify.cpp
cpp/test/: simple_asm.cpp
python_bindings/: Makefile  README.md  setup.py
python_bindings/halide/: __init__.py
search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6a.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_69.js  classes_6c.js  classes_6f.js  classes_70.js  classes_72.js  classes_73.js  classes_74.js  defines_68.js  enums_63.js  enums_66.js  enumvalues_61.js  enumvalues_65.js  enumvalues_66.js  (+57 more)
src/: Argument.h  AutomaticScheduling.cpp  AutomaticScheduling.h  CMakeLists.txt  CallMap.cpp  CallMap.h  CodeGen.cpp  CodeGen.h  CodeGen_ARM.cpp  CodeGen_C.cpp  CodeGen_GPU_Host.cpp  CodeGen_OpenGL_Dev.cpp  CodeGen_OpenGL_Dev.h  CodeGen_Posix.cpp  CodeGen_X86.cpp  DebugToFile.cpp  Deinterleave.cpp  EarlyFree.cpp  Func.cpp  FuseGPUThreadLoops.cpp  Generator.cpp  Generator.h  HalideRuntime.cmake  IR.cpp  IR.h  IREquality.cpp  IRMultiMutator.cpp  IRMultiMutator.h  IRMutator.cpp  IRPrinter.cpp  IRVisitor.cpp  InjectHostDevBufferCopies.cpp  Introspection.cpp  Introspection.h  LLVM_Runtime_Linker.cpp  Lower.cpp  MatlabOutput.cpp  MatlabOutput.h  ModulusRemainder.cpp  ObjectInstanceRegistry.h  (+17 more)
src/runtime/: HalideRuntime.h  matlab.cpp  opengl.cpp  runtime.opengl_host.cpp  runtime_internal.h  test-gl  test.sh  test_fragment_shader.glsl  test_vertex_shader.glsl
test/: CMakeLists.txt  HalideGenerator.cmake  bad_elem_size.cpp  bound.cpp  bounds.cpp  bounds_inference.cpp  bounds_inference_chunk.cpp  bounds_inference_complex.cpp  c_function.cpp  cast.cpp  chunk.cpp  chunk_sharing.cpp  circular_reference_leak.cpp  compare_vars.cpp  hello_gl.cpp
test/common/: random_expr.h
test/correctness/: fuzz_simplify.cpp  hello_gl.cpp  introspection.cpp  matlab_output.cpp  multi_mutator.cpp  simd_op_check.cpp
test/generator/: example_generator.cpp  gaussian_blur_generator.cpp  test_example_generator.cpp
test/ios/: AppProtocol.mm  BufferT.h  BufferT.m  CMakeLists.txt  ViewController.m  ViewController.mm  main.m
test/osx/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  AppProtocol.mm  BufferT.h  BufferT.m  CMakeLists.txt  index.html
test/pnacl/: CMakeLists.txt  index.html  main.cpp  test_pnacl.nmf
test/static/: fuzz_codegen_common.h  fuzz_codegen_generate.cpp  fuzz_codegen_test.cpp
